uh oh - image lagging

--- a/index.html
+++ b/index.html
@@ -18,121 +18,11 @@
     <a class="github" href="https://github.com/ChrisCavs/rallax.js">On GitHub</a>
   </header>
   <main>
-    <section class="about">
-      <p class="about-body">
-        T-Writer.js is a native typewriter-effect library, designed to be:
-      </p>
-      <div class="about1 about-demo"></div>
-      <div class="about2 about-demo"></div>
-      <div class="about3 about-demo"></div>
-      <div class="about4 about-demo"></div>
-      <p class="about-body">
-        Below are a few demos, accompanied by the code you need to make it happen.  These demos do not cover the full range of functionality built in.  For a complete list of methods, please see the <a href="https://github.com/ChrisCavs/t-writer.js">documentation on GitHub</a>.
-      </p>
-    </section>
-
-    <section class="demo">
-      <div class="test5 test"></div>
-      <pre class="code-block">
-const writer = new Typewriter(target, {
-  loop: true,
-  typeColor: 'blue'
-})
-
-writer
-  .type('A simple syntax makes it easy.')
-  .rest(500)
-  .start()
-          </pre>
-    </section>
-
-    <section class="demo">
-      <div class="test1 test"></div>
-      <pre class="code-block">
-const writer = new Typewriter(target, {
-  loop: true,
-  typeSpeed: 80,
-  deleteSpeed: 80,
-  typeColor: 'red'
-})
-
-writer
-  .type('You can type')
-  .rest(500)
-  .changeOps({ deleteSpeed: 80 })
-  .remove(4)
-  .type('edit')
-  .rest(500)
-  .remove(4)
-  .type('synchronize callbacks')
-  .rest(500)
-  .changeOps({ deleteSpeed: 20 })
-  .remove(21)
-  .type('change options on the go')
-  .rest(500)
-  .clear()
-  .start()
-      </pre>
-    </section>
-
-    <section class="demo">
-      <div class="test2 test"></div>
-      <pre class="code-block">
-const writer = new Typewriter(target, {
-  loop: true,
-  typeColor: 'red'
-})
-
-writer
-  .strings(
-    400,
-    "Set many strings",
-    "In just one call",
-    "Using the 'strings' method"
-  )
-  .start()
-      </pre>
-    </section>
-
-    <section class="demo">
-      <div class="flex">
-        <div class="test3 test"></div><div class="test4 test"></div>
-      </div>
-      <pre class="code-block">
-const writer1 = new Typewriter(target1, {
-  typeSpeed: 60
-})
-
-const writer2 = new Typewriter(target2, {
-  typeSpeed: 60
-})
-
-writer1
-  .type('Combo typewriters to')
-  .removeCursor()
-  .then(writer2.start.bind(writer2))
-  .start()
-
-writer2
-  .type("create complex effects")
-  .rest(500)
-  .clear()
-  .changeTypeColor('red')
-  .type("defy user expectations")
-  .rest(500)
-  .clear()
-  .changeTypeColor('blue')
-  .type("generate a custom loop")
-  .rest(500)
-  .clear()
-  .changeTypeColor('black')
-  .then(writer1.start.bind(writer1))
-      </pre>
-    </section>
+    <div class="test1"></div>
 
     <footer>
       <p>MIT. © 2018 Christopher Cavalea</p>
-      <a class="github" href="https://github.com/ChrisCavs/t-writer.js">On GitHub</a>
+      <a class="github" href="https://github.com/ChrisCavs/rallax.js">On GitHub</a>
     </footer>
   </main>
 </body>
