add functioning test/styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
     <a class="github" href="https://github.com/ChrisCavs/rallax.js">On GitHub</a>
   </header>
   <main>
-    <div class="test1"></div>
+    <section class="description">
+    </section>
+
+    <section class="test2">
+      <p>
+        <span class="method">rallax</span>
+        (
+        <span class="string">'.test'</span>
+        ,
+        <span class="string">'./test-image'</span>, {
+      </p>
+      <p>speed: <span class="num">0.6</span></p>
+      <p>})</p>
+    </section>
 
     <footer>
       <p>MIT. © 2018 Christopher Cavalea</p>
