add changes to overall structure

--- a/index.html
+++ b/index.html
@@ -21,23 +21,78 @@
     <section class="description">
     </section>
 
-    <section class="test2">
-      <p>
-        <span class="method">rallax</span>
-        (
-        <span class="string">'.test'</span>
-        ,
-        <span class="string">'./test-image'</span>, {
-      </p>
-      <p>speed: <span class="num">0.6</span></p>
-      <p>})</p>
+    <section class="test1 test">
+      <div class="test-text">
+        <p>
+          <span class="method">rallax</span>
+          (
+          <span class="string">'.test'</span>
+          ,
+          <span class="string">'./test-image1'</span>)
+        </p>
+      </div>
     </section>
 
-    <footer>
-      <p>MIT. © 2018 Christopher Cavalea</p>
-      <a class="github" href="https://github.com/ChrisCavs/rallax.js">On GitHub</a>
-    </footer>
+    <section class="description">
+      <h1 class="title">Explore a variety of options, including:</h1>
+      <ul class="list">
+        <li>Changing parallax <span class="bold">speed</span></li>
+        <li>Adjusting the <span class="bold">scale</span> and <span class="bold">offset</span> of the image</li>
+        <li>Setting a <span class="bold">zIndex</span></li>
+        <li>Specifying when to disable the effect, based on screen width</li>
+      </ul>
+    </section>
+
+    <section class="flex">
+      <div class="test3 test">
+        <div class="test-text">
+          <p>
+            <span class="method">rallax</span>
+            (
+            <span class="string">'.test'</span>
+            ,
+            <span class="string">'./test-image3'</span>, {
+          </p>
+          <p class="tab1">adjust: {</p>
+          <p class="tab2">scale: <span class="num">0.1</span>,</p>
+          <p class="tab2">offset: {</p>
+          <p class="tab3">top: <span class="num">0</span>,</p>
+          <p class="tab3">right: <span class="num">0</span></p>
+          <p class="tab2">})</p>
+          <p class="tab1">})</p>
+          <p>})</p>
+        </div>
+      </div>
+
+      <div class="test4 test">
+        <div class="test-text">
+          <p>
+            <span class="method">rallax</span>
+            (
+            <span class="string">'.test'</span>
+            ,
+            <span class="string">'./test-image3'</span>, {
+          </p>
+          <p class="tab1">adjust: {</p>
+          <p class="tab2">scale: <span class="num">0.1</span>,</p>
+          <p class="tab2">offset: {</p>
+          <p class="tab3">top: <span class="num">0</span>,</p>
+          <p class="tab3">left: <span class="num">0</span></p>
+          <p class="tab2">})</p>
+          <p class="tab1">})</p>
+          <p>})</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="description">
+      <h1 class="title">Do it all effortlessly, <span class="bold">quickly</span>, and <span class="bold">without jQuery</span>, using one tiny module.  See the full <a href="https://github.com/ChrisCavs/rallax.js">documentation on GitHub.</a></h1>
+    </section>
   </main>
+  <footer>
+    <p>MIT. © 2018 Christopher Cavalea</p>
+    <a class="github" href="https://github.com/ChrisCavs/rallax.js">On GitHub</a>
+  </footer>
 </body>
 
 </html>
