fix styles, finish index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 <body>
   <header>
-    <h1>Rallax.js</h1>
+    <h1>Rallax<span class="js">.js</span></h1>
     <a class="github" href="https://github.com/ChrisCavs/rallax.js">On GitHub</a>
   </header>
   <main>
     <section class="description">
+      <h1 class="title">Dead-simple <span class="bold">parallax scrolling</span>, without dependencies.</h1>
     </section>
 
     <section class="test1 test">
@@ -86,7 +87,8 @@
     </section>
 
     <section class="description">
-      <h1 class="title">Do it all effortlessly, <span class="bold">quickly</span>, and <span class="bold">without jQuery</span>, using one tiny module.  See the full <a href="https://github.com/ChrisCavs/rallax.js">documentation on GitHub.</a></h1>
+      <h1 class="title">Do it all <span class="bold">effortlessly</span>, <span class="bold">quickly</span>, and <span class="bold">without jQuery</span>.</h1>
+      <h1 class="title">See the full <a href="https://github.com/ChrisCavs/rallax.js">documentation on GitHub.</a></h1>
     </section>
   </main>
   <footer>
